# HumiditySentry

./: .gitignore  CMakeLists.txt  HumiditySentry.c  LICENSE
humidifier/: CMakeLists.txt  humidifier_main.c  humidifier_main.h
i2c_prj/: CMakeLists.txt  i2c_main.c  i2c_main.h  i2c_util.c  i2c_util.h
i2c_prj/seesaw/: CMakeLists.txt  seesaw.c  seesaw.h
i2c_prj/sht40/: CMakeLists.txt  sht40.c  sht40.h
lib/config/: CMakeLists.txt  DEV_Config.c
lib/fatfs/: diskio.c
lib/lcd/: CMakeLists.txt  LCD2_Driver.c  LCD2_Driver.h  LCD_Driver.c  LCD_Driver.h  LCD_GUI.c  LCD_Touch.c  LCD_Touch.h
lib/sdcard/: MMC_SD.h
pi_platform/: CMakeLists.txt  settings.h  util.c  util.h
tch/: CMakeLists.txt  tch_main.c  tch_main.h  tch_types.h
ui/: CMakeLists.txt  ui.h  ui_canvas.h  ui_cnvs.h  ui_colors.h  ui_common.c  ui_common.h  ui_container.h  ui_mainwindow.c  ui_mainwindow.h  ui_text.c  ui_text.h  ui_util.c  ui_util.h  ui_widget.h  ui_window.c  ui_window.h  ui_window_tex.c
